# Incorrect_django

./: README.md  README2.md  db.sqlite3  manage.py  pyproject.toml
users/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
users/migrations/: 0001_initial.py
wrongassign/: asgi.py  settings.py  urls.py  wsgi.py
